<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_validador"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.whatsapp.caioenascimento.whatsapp.activity.ValidadorActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="@dimen/largura_logo"
        android:layout_height="@dimen/altura_logo"
        app:srcCompat="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView" />

    <TextView
        android:text="@string/titulo_validacao"
        android:textSize="24dp"
        android:textColor="@color/textColorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:id="@+id/textView" />

    <TextView
        android:text="@string/texto_validacao"
        android:textSize="16dp"
        android:textColor="@color/textColorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:textColor="@color/textColorPrimary"
        android:hint="@string/digite_codigo"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:id="@+id/editText2" />

    <Button
        android:text="@string/texto_validar"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/textColorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/button3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
