<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.whatsapp.caioenascimento.whatsapp.activity.LoginActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/largura_logo"
        android:layout_height="@dimen/altura_logo"
        app:srcCompat="@drawable/logo"
        android:layout_gravity="center"
        android:id="@+id/imageView"
        android:contentDescription="@string/app_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/digite_nome"
        android:textColor="@color/textColorPrimary"
        android:ems="10"
        android:layout_marginTop="23dp"
        android:id="@+id/editText" />

    <RelativeLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_codigo_pais"
            android:layout_width="50dp"
            android:ems="10"
            android:layout_height="wrap_content"
            android:hint="+55"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:textColor="@color/textColorPrimary"
            android:id="@+id/edit_telefone"
            android:hint="(99)99999-9999"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:id="@+id/edit_ddd_numero"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:hint="(81)"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/edit_telefone"
            android:layout_toStartOf="@+id/edit_telefone" />

    </RelativeLayout>

    <Button
        android:text="@string/botao_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:id="@+id/button2"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark" />

</LinearLayout>
